basic mobile optimization

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <main class="d-flex flex-column">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-4">
+            <div class="col-12 col-lg-4">
                 <div>
                     <h3>Add List</h3>
                     <form onsubmit="app.listsController.createList()" class="row mb-3">
